infra/k8s/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tkt-exp-depl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tkt-expiration

  template:
    metadata:
      labels:
        app: tkt-expiration
    spec:
      containers:
      - name: tkt-expiration
        image: markshaw/tkt-expiration
        resources:
          limits:
            cpu: "1"
            memory: "256Mi"
