infra/k8s/auth-depl.yaml
apiVersion: v1
kind: Service

metadata:
  name: tkt-auth-srv

spec:
  selector:
    app: tkt-auth
    
  ports:
  - name: tkt-auth
    protocol: TCP
    port: 3000
    targetPort: 3000


---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tkt-auth-depl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tkt-auth

  template:
    metadata:
      labels:
        app: tkt-auth
    spec:
      containers:
      - name: tkt-auth
        image: markshaw/tkt-auth
        ports:
        - containerPort: 3000
