infra/k8s/auth-mongo-depl.yaml
apiVersion: v1
kind: Service

metadata:
  name: tkt-auth-mongo-srv

spec:
  selector:
    app: tkt-auth-mongo
    
  ports:
  - name: db
    protocol: TCP
    port: 27017
    targetPort: 27017


---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tkt-auth-mongo-depl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tkt-auth-mongo

  template:
    metadata:
      labels:
        app: tkt-auth-mongo
    spec:
      containers:
      - name: tkt-auth-mongo
        image: mongo
        ports:
        - containerPort: 27017
