infra/k8s/orders-depl.yaml
apiVersion: v1
kind: Service

metadata:
  name: tkt-orders-srv

spec:
  selector:
    app: tkt-orders
    
  ports:
  - name: tkt-orders
    protocol: TCP
    port: 3000
    targetPort: 3000


---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tkt-orders-depl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tkt-orders

  template:
    metadata:
      labels:
        app: tkt-orders
    spec:
      containers:
      - name: tkt-orders
        image: markshaw/tkt-orders
        ports:
        - containerPort: 3000
