infra/k8s/payments-depl.yaml
apiVersion: v1
kind: Service

metadata:
  name: tkt-payments-srv

spec:
  selector:
    app: tkt-payments
    
  ports:
  - name: tkt-payments
    protocol: TCP
    port: 3000
    targetPort: 3000


---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tkt-payments-depl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tkt-payments

  template:
    metadata:
      labels:
        app: tkt-payments
    spec:
      containers:
      - name: tkt-payments
        image: markshaw/tkt-payments
        ports:
        - containerPort: 3000
