infra/k8s/tickets-depl.yaml
apiVersion: v1
kind: Service

metadata:
  name: tkt-tickets-srv

spec:
  selector:
    app: tkt-tickets
    
  ports:
  - name: tkt-tickets
    protocol: TCP
    port: 3000
    targetPort: 3000


---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: tkt-tickets-depl

spec:
  replicas: 1

  selector:
    matchLabels:
      app: tkt-tickets

  template:
    metadata:
      labels:
        app: tkt-tickets
    spec:
      containers:
      - name: tkt-tickets
        image: markshaw/tkt-tickets
        ports:
        - containerPort: 3000
